# spbla

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  README.md  annotated.html  dir_0ac3b9cc8e3d917b68f6d6960e973676.html  dir_5bba93212960ebf32e5de39b8daf9116.html  dir_93bdd427efe0fc4a3ea8e442a098d471.html  files.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_type.html  menudata.js  spbla_8h.html  spbla_8h_source.html  structspbla__DeviceCaps-members.html  structspbla__DeviceCaps.html
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: docs.yml  draft-pdf.yml  pydocs.yml  ubuntu.yml
cdocs/: classes.html  dir_0ac3b9cc8e3d917b68f6d6960e973676.html  dir_5bba93212960ebf32e5de39b8daf9116.html  files.html  functions.html  globals_eval.html  globals_func.html  graph_legend.html  spbla_8h.html  spbla_8h__incl.map  spbla_8h__incl.md5  structspbla__DeviceCaps.html
cdocs/search/: all_1.js  all_6.js  classes_0.js  defines_0.js  typedefs_0.js  variables_0.js  variables_1.js  variables_2.js  variables_4.js
docs/: extended_example.md  getting_started.md  tutorial.md
docs/joss/: paper.bib  paper.json  paper.md  tempate.md
html/: index.html
latex/: refman.tex
pydocs/pyspbla/: bridge.html  gviz.html  index.html  io.html  matrix.html  utils.html  wrapper.html
python/: README.md  examples.py  features.py  setup.py
python/data/func_dup/shape_0/case_0/: matrix_1.mtx
python/data/func_dup/shape_0/case_1/: matrix_0.mtx
python/data/func_dup/shape_0/case_10/: matrix_0.mtx
python/data/func_dup/shape_0/case_11/: matrix_1.mtx
python/data/func_dup/shape_0/case_12/: matrix_0.mtx
python/data/func_dup/shape_0/case_13/: matrix_0.mtx
python/data/func_dup/shape_0/case_14/: matrix_1.mtx
python/data/func_dup/shape_0/case_15/: matrix_0.mtx
python/data/func_dup/shape_0/case_16/: matrix_0.mtx
python/data/func_dup/shape_0/case_17/: matrix_1.mtx
python/pyspbla/: __init__.py  __main__.py  bridge.py  gviz.py  io.py  matrix.py  utils.py  wrapper.py
python/tests/: generator.py  test_matrix_dup.py  test_matrix_ewiseadd.py  test_matrix_kronecker.py  test_matrix_mxm.py  test_matrix_reduce.py  test_matrix_transpose.py  test_transitive_closure.py
scripts/: run_tests_all.sh  run_tests_fallback.sh
search/: all_0.js  all_2.js  all_3.js  all_4.js  all_5.js  classes_0.js  enums_0.js  enumvalues_0.js  files_0.js  functions_0.js  searchdata.js  typedefs_0.js  variables_3.js  variables_5.js  variables_6.js
spbla/: CMakeLists.txt
spbla/include/spbla/: spbla.h
spbla/sources/: spbla_Common.hpp  spbla_Finalize.cpp  spbla_GetAbout.cpp  spbla_GetDeviceCaps.cpp  spbla_GetLicenseInfo.cpp  spbla_GetVersion.cpp  spbla_Initialize.cpp  spbla_Kronecker.cpp  spbla_Matrix_Build.cpp  spbla_Matrix_Duplicate.cpp  spbla_Matrix_EWiseAdd.cpp  spbla_Matrix_Extract.cpp  spbla_Matrix_ExtractPairs.cpp  spbla_Matrix_ExtractSubMatrix.cpp  spbla_Matrix_Free.cpp  spbla_Matrix_Marker.cpp  spbla_Matrix_Ncols.cpp  spbla_Matrix_New.cpp  spbla_Matrix_Nrows.cpp  spbla_Matrix_Nvals.cpp  spbla_Matrix_Reduce.cpp  spbla_Matrix_SetElement.cpp  spbla_Matrix_SetMarker.cpp  spbla_Matrix_Transpose.cpp  spbla_MxM.cpp  spbla_SetupLogger.cpp
spbla/sources/backend/: Backend.hpp  Matrix.hpp  backend_base.hpp  matrix_base.hpp
spbla/sources/core/: Defines.hpp  Exception.hpp  Library.cpp  Library.hpp  Matrix.cpp  Matrix.hpp  OptionsParser.hpp  config.hpp  error.hpp  library.cpp  library.hpp  matrix.cpp  matrix.hpp  version.hpp
spbla/sources/cpu/: Backend.cpp  Backend.hpp  Matrix.cpp  Matrix.hpp
spbla/sources/cuda/: cuda_backend.cu  cuda_backend.hpp  cuda_instance.cpp  cuda_instance.cu  cuda_instance.hpp  cuda_matrix.cu  cuda_matrix.hpp  cuda_matrix_build.cu  cuda_matrix_ewiseadd.cu  cuda_matrix_extract.cu  cuda_matrix_extract_sub_matrix.cu  cuda_matrix_kronecker.cu  cuda_matrix_multiply.cu  cuda_matrix_reduce.cu  cuda_matrix_transpose.cu  instance.cpp  instance.cu  instance.hpp  matrix_csr.cu  matrix_csr.hpp  matrix_csr_ewiseadd.cu  matrix_csr_extract.cu  matrix_csr_extract_sub_matrix.cu  matrix_csr_kronecker.cu  matrix_csr_multiply.cu  matrix_csr_reduce.cu  matrix_csr_transpose.cu  matrix_dense.cu  matrix_dense.hpp  placeholder.txt
spbla/sources/cuda/details/: device_allocator.cuh  host_allocator.hpp
spbla/sources/cuda/kernels/: bin_search.cuh  dense_common.cuh  dense_multiply_add.cuh  slow_sort.cuh  spkron.cuh  spmerge.cuh  spreduce.cuh  spsubmatrix.cuh  sptranspose.cuh  sptranspose2.cuh
spbla/sources/io/: logger.cpp  logger.hpp
spbla/sources/opencl/: opencl_backend.cpp  opencl_backend.hpp  opencl_matrix.cpp  opencl_matrix.hpp  opencl_matrix_build.cpp  opencl_matrix_ewiseadd.cpp  opencl_matrix_extract.cpp  opencl_matrix_extract_sub_matrix.cpp  opencl_matrix_kronecker.cpp  opencl_matrix_multiply.cpp  opencl_matrix_reduce.cpp  opencl_matrix_transpose.cpp  placeholder.txt
spbla/sources/sequential/: sq_backend.cpp  sq_backend.hpp  sq_csr_data.hpp  sq_ewiseadd.cpp  sq_ewiseadd.hpp  sq_kronecker.cpp  sq_kronecker.hpp  sq_matrix.cpp  sq_matrix.hpp  sq_reduce.cpp  sq_reduce.hpp  sq_spgemm.cpp  sq_spgemm.hpp  sq_submatrix.cpp  sq_submatrix.hpp  sq_transpose.cpp  sq_transpose.hpp
spbla/sources/utils/: csr_utils.cpp  csr_utils.hpp  exclusive_scan.hpp  timer.hpp
spbla/tests/: CMakeLists.txt  spbla_Library_Setup.cpp  spbla_Matrix_BuildExtract.cpp  test_basic_cuda.cu  test_library_api.cpp  test_matrix_dense_vs_naive.cpp  test_matrix_element.cpp  test_matrix_ewiseadd.cpp  test_matrix_extract_sub_matrix.cpp  test_matrix_kronecker.cpp  test_matrix_misc.cpp  test_matrix_mxm.cpp  test_matrix_reduce.cpp  test_matrix_setup.cpp  test_matrix_transpose.cpp
spbla/utils/testing/: Matrix.hpp  MatrixEWiseAdd.hpp  MatrixGenerator.hpp  MatrixKronecker.hpp  MatrixMxM.hpp  MatrixPrinting.hpp  Pair.hpp  Testing.hpp  matrix.hpp  matrix_ewiseadd.hpp  matrix_generator.hpp  matrix_kronecker.hpp  matrix_mxm.hpp  matrix_printing.hpp  pair.hpp  testing.hpp  timer.hpp
(+469 files in other folders)
